# pde-agent

./: .gitignore  .gitmodules  CLAUDE.md  README.md  README_zh.md  start-neo4j.sh  start.sh
engines/: README.md
engines/api/: Cargo.toml
engines/api/scripts/: classical_solve.py  pdeformer2_infer.py
engines/api/src/: main.rs  tests.rs
engines/api/src/error/: mod.rs
engines/api/src/models/: mod.rs
engines/api/src/routes/: files.rs  health.rs  mod.rs  solve.rs
engines/api/src/solvers/: classical.rs  pdeformer2.rs
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/plugins/: skillsPlugin.ts
frontend/skills/pde-skill/: SKILL.md  knowledge-api.md  solve-api.md
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  Navbar.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  select.tsx  spinner.tsx  textarea.tsx
frontend/src/i18n/: context.tsx  translations.ts
frontend/src/lib/: api.ts
frontend/src/pages/home/: HomePage.tsx
frontend/src/pages/knowledge/: BenchmarkBrowser.tsx  EquationBrowser.tsx  GraphSearch.tsx  KnowledgePage.tsx  MethodBrowser.tsx  ModelBrowser.tsx  PaperCard.tsx  PaperSearch.tsx  RecentPapers.tsx
frontend/src/pages/skills/: SkillsPage.tsx
frontend/src/pages/solver/: Heatmap.tsx  SolveForm.tsx  SolveResult.tsx  SolverPage.tsx
frontend/src/test/: api.test.ts
frontend/src/types/: index.ts
knowledge_base/: .gitignore  Cargo.toml  README.md
knowledge_base/migrations/: 001_initial.sql
knowledge_base/src/: lib.rs  main.rs
knowledge_base/src/api/: handlers.rs  mod.rs  routes.rs
knowledge_base/src/api/handlers/: mod.rs  query.rs  write.rs
knowledge_base/src/ingestion/: arxiv_fetcher.rs  classifier.rs  mod.rs  pipeline.rs
knowledge_base/src/retrieval/: mod.rs  query.rs  recommender.rs  semantic.rs  structured.rs
knowledge_base/src/store/: content_repo.rs  graph.rs  method_repo.rs  mod.rs  node_repo.rs  paper_repo.rs  relation_repo.rs  schema.rs  schema_tests.rs  vector_index.rs
skills/: pde-skill
skills/pde-ingest-skill/: SKILL.md  ingest-api.md
skills/pde-ingest-skill/references/: api-validation-notes.md  solver-api-history.md
skills/pde-ingest-skill/templates/: solve-with-history.json
solvers/: README.md
solvers/api/: Cargo.toml
solvers/api/scripts/: classical_solve.py  pdeformer2_infer.py
solvers/api/src/: main.rs
solvers/api/src/error/: mod.rs
solvers/api/src/models/: mod.rs
solvers/api/src/routes/: mod.rs  solve.rs  solvers.rs
solvers/api/src/solvers/: classical.rs  mod.rs  pdeformer2.rs
