[package]
name = "knowledge-base"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "knowledge-base"
path = "src/main.rs"

[lib]
name = "knowledge_base"
path = "src/lib.rs"

[dependencies]
# Neo4j graph database driver
neo4rs = "0.8"

# SQLite (content store for long-form text)
rusqlite = { version = "0.31", features = ["bundled"] }

# HTTP framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Config
dotenvy = "0.15"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
